[gd_scene load_steps=12 format=2]

[ext_resource path="res://Src/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Screens/PlayerSelection.gd" type="Script" id=2]
[ext_resource path="res://Assets/GUI/TitleFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/DefaultEnv.tres" type="Environment" id=4]
[ext_resource path="res://Assets/meshes/terrain.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Src/Level/tree1.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/2d/left_arrow.png" type="Texture" id=7]
[ext_resource path="res://Assets/GUI/DefaultTheme.tres" type="Theme" id=8]
[ext_resource path="res://Assets/2d/right_arrow.png" type="Texture" id=9]

[sub_resource type="StyleBoxFlat" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.0431373, 1, 0.305882, 1 )

[node name="PlayerSelection" type="Spatial"]
script = ExtResource( 2 )

[node name="Character" parent="." instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.919684, 0.392658, 0, -0.392658, 0.919684, -0.314306, 4.09146, 7.37852 )
environment = ExtResource( 4 )

[node name="MarginContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer"]
margin_left = 24.386
margin_top = 23.5451
margin_right = 148.386
margin_bottom = 98.5451
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MarginContainer/MarginContainer2"]
margin_right = 124.0
margin_bottom = 75.0
custom_styles/focus = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
text = "Back"
flat = true

[node name="Panel" type="Panel" parent="MarginContainer"]
anchor_left = 0.953
anchor_top = 0.948
anchor_right = 0.953
anchor_bottom = 0.948
margin_left = -264.84
margin_top = -274.56
margin_right = -0.840088
margin_bottom = -1.56006
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 44.0
margin_top = 56.0
size_flags_horizontal = 10
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_right = 219.0
margin_bottom = 46.0

[node name="PrevSkin" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
margin_right = 40.0
margin_bottom = 46.0
icon = ExtResource( 7 )
flat = true

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 44.0
margin_top = 9.0
margin_right = 138.0
margin_bottom = 36.0
text = "Skin color"

[node name="NextSkin" type="Button" parent="MarginContainer/Panel/VBoxContainer/HBoxContainer"]
margin_left = 142.0
margin_right = 181.0
margin_bottom = 46.0
icon = ExtResource( 9 )
flat = true

[node name="HairStyleSelector" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 50.0
margin_right = 219.0
margin_bottom = 96.0

[node name="Prev" type="Button" parent="MarginContainer/Panel/VBoxContainer/HairStyleSelector"]
margin_right = 40.0
margin_bottom = 46.0
icon = ExtResource( 7 )
flat = true

[node name="HairStyleLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/HairStyleSelector"]
margin_left = 44.0
margin_top = 9.0
margin_right = 129.0
margin_bottom = 36.0
text = "Hair Style"

[node name="Next" type="Button" parent="MarginContainer/Panel/VBoxContainer/HairStyleSelector"]
margin_left = 133.0
margin_right = 172.0
margin_bottom = 46.0
icon = ExtResource( 9 )
flat = true

[node name="HairColorSelector" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer"]
margin_top = 100.0
margin_right = 219.0
margin_bottom = 146.0

[node name="Prev" type="Button" parent="MarginContainer/Panel/VBoxContainer/HairColorSelector"]
margin_right = 40.0
margin_bottom = 46.0
icon = ExtResource( 7 )
flat = true

[node name="HairColorLabel" type="Label" parent="MarginContainer/Panel/VBoxContainer/HairColorSelector"]
margin_left = 44.0
margin_top = 9.0
margin_right = 129.0
margin_bottom = 36.0
text = "Hair Style"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="MarginContainer/Panel/VBoxContainer/HairColorSelector"]
margin_left = 133.0
margin_right = 172.0
margin_bottom = 46.0
icon = ExtResource( 9 )
flat = true

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( -0.0590301, 0, -2.33525, 0, 1, 0, 0.999681, 0, -0.0252697, -0.0366707, -1.303, -0.00395012 )
mesh = ExtResource( 5 )
material/0 = SubResource( 2 )

[node name="tree1" parent="." instance=ExtResource( 6 )]
transform = Transform( 1.72656, 0, -1.00945, 0, 2, 0, 1.00945, 0, 1.72656, 0, -1.46485, -6.83513 )

[node name="tree2" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.86294, 0, -0.727641, 0, 2, 0, 0.727641, 0, -1.86294, 4, -1.46485, -3.76293 )

[node name="tree3" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.23664, -0.117707, -1.56744, -0.072907, 1.99653, -0.0924091, 1.57016, 0, -1.23879, 8.90158, -1.46485, -1.38399 )

[node name="tree4" parent="." instance=ExtResource( 6 )]
transform = Transform( -1.23664, -0.117707, -1.56744, -0.072907, 1.99653, -0.0924091, 1.57016, 0, -1.23879, -4.61529, -1.46485, -1.38399 )

[node name="tree5" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.413873, 0.0937814, 1.69965, -0.056511, 1.54753, -0.0716273, -1.08706, -0.0273743, 0.266214, -4.61529, -1.46485, -5.29066 )

[node name="tree6" parent="." instance=ExtResource( 6 )]
transform = Transform( 1.16107, 0.054159, 0.254085, -0.056511, 1.54753, -0.0716273, 0.0699604, 0.0813087, 1.70151, -4.61529, -1.46485, 1.60998 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.665663, -0.393102, 0.634321, 0.238997, 0.692937, 0.680234, -0.706946, 0.604408, -0.367312, 0.103563, 0, 4.3109 )
shadow_enabled = true
[connection signal="focus_entered" from="MarginContainer/MarginContainer2/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_entered" from="MarginContainer/MarginContainer2/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="pressed" from="MarginContainer/MarginContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/PrevSkin" to="." method="_on_PrevSkin_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HBoxContainer/NextSkin" to="." method="_on_NextSkin_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HairStyleSelector/Prev" to="." method="_on_HairStylePrev_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HairStyleSelector/Next" to="." method="_on_HairStyleNext_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HairColorSelector/Prev" to="." method="_on_HairColorPrev_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/VBoxContainer/HairColorSelector/Next" to="." method="_on_HairColorNext_pressed"]
